--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "fast-sort": "^3.4.0",
+    "lodash": "^4.17.21",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "next-cloudinary": "^4.25.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.199",
     "daisyui": "^3.9.2"
   }
 }
