--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.199",
-    "daisyui": "^3.9.2"
+    "daisyui": "^3.9.2",
+    "encoding": "^0.1.13"
   }
 }
